# bird

./: .gitignore  Cargo.toml  README.md
.github/workflows/: macos.yml
crates/bird-cli/: Cargo.toml
crates/bird-cli/src/: main.rs
crates/bird-core/: Cargo.toml
crates/bird-core/src/: client.rs  credentials.rs  features.rs  lib.rs  parser.rs  query_ids.rs  transaction_id.rs  transport.rs  types.rs
crates/bird-curl-impersonate-sys/: Cargo.toml  build.rs
crates/bird-curl-impersonate-sys/src/: lib.rs
crates/sweet-cookie/: Cargo.toml
crates/sweet-cookie/src/: lib.rs  types.rs  util.rs
crates/sweet-cookie/src/providers/: chromium.rs  firefox.rs  inline.rs  mod.rs  safari.rs
docs/: cutover.md  parity.md
scripts/: cutover-rust-bird.sh  install.sh  live-smoke.sh  package-release.sh  rollback-rust-bird.sh
