[workspace]
members = [
    "crates/bird-cli",
    "crates/bird-core",
    "crates/bird-curl-impersonate-sys",
    "crates/sweet-cookie",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.1"
authors = ["Erlin Hoxha"]
rust-version = "1.93"

[workspace.dependencies]
anyhow = "1.0.100"
aes = "0.8.4"
base64 = "0.22.1"
cbc = { version = "0.1.2", features = ["alloc"] }
clap = { version = "4.5.48", features = ["derive"] }
curl = "0.4.49"
curl-sys = { version = "0.4.85", default-features = false }
dirs = "6.0.0"
hex = "0.4.3"
json5 = "0.4.1"
pbkdf2 = "0.12.2"
rand = "0.9.2"
regex = "1.11.3"
rusqlite = { version = "0.37.0", features = ["bundled"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
sha2 = "0.10.9"
tempfile = "3.23.0"
thiserror = "2.0.17"
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
wait-timeout = "0.2.1"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
