[package]
name = "bird-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "bird"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bird-core = { path = "../bird-core" }
clap.workspace = true
dirs.workspace = true
json5.workspace = true
serde.workspace = true
serde_json.workspace = true
