[package]
name = "bird-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
curl.workspace = true
dirs.workspace = true
hex.workspace = true
json5.workspace = true
rand.workspace = true
regex.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sweet-cookie = { path = "../sweet-cookie" }
tempfile.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true
