[package]
name = "sweet-cookie"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
aes.workspace = true
base64.workspace = true
cbc.workspace = true
clap.workspace = true
dirs.workspace = true
hex.workspace = true
pbkdf2.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
tempfile.workspace = true
thiserror.workspace = true
url.workspace = true
wait-timeout.workspace = true

[dev-dependencies]
tempfile.workspace = true
